--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     precisar contar com a sorte.
                 </p>
                 <form>
-                    <input type="text" name="name" id="name" placeholder="Nome">
-                    <input type="text" name="email" id="email" placeholder="Email">
+                    <input type="text" name="name" id="name" placeholder="Digite seu Nome">
+                    <input type="text" name="email" id="email" placeholder="Digite seu Email">
                     <select name="place" id="place">
                         <option value="pa">
                             Pará
