--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
                     Neste evento, você vai aprender todos o segredos que vão te fazer ser um empreendedor de sucesso sem
                     precisar contar com a sorte.
                 </p>
-                <form>
-                    <input type="text" name="name" id="name" placeholder="Digite seu Nome">
-                    <input type="text" name="email" id="email" placeholder="Digite seu Email">
-                    <select name="place" id="place">
+                <form
+                    action="https://gmail.us20.list-manage.com/subscribe/post?u=45bdf13b0a419b6308d844e64&amp;id=cd682406cc"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank" novalidate>
+                    <input type="text" name="FNAME" id="name" placeholder="Digite seu Nome">
+                    <input type="text" name="EMAIL" id="email" placeholder="Digite seu Email">
+                    <select name="PLACE">
                         <option value="pa">
                             Pará
                         </option>
@@ -45,7 +48,13 @@
                         <option value="sp">
                             São Paulo
                         </option>
+                        <option value="outro">
+                            Outro
+                        </option>
                     </select>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                            name="b_45bdf13b0a419b6308d844e64_cd682406cc" tabindex="-1" value=""></div>
                     <input type="submit" value="INSCREVA-SE">
                 </form>
             </div>
@@ -56,10 +65,12 @@
                 <h3>O Palestrante</h3>
                 <p>
                     Carlos Fortana é conhecido por dar palestras que abalam a estrutura do marketing tradicional.
-                    Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para seu negócio decolar. 
+                    Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para seu negócio
+                    decolar.
                 </p>
                 <p>
-                    Formado em Marketing pela Universidade XYZ e fundador do MarkUp, a empresa vencedora dos ultimos 5 prêmios MarketingBr. 
+                    Formado em Marketing pela Universidade XYZ e fundador do MarkUp, a empresa vencedora dos ultimos 5
+                    prêmios MarketingBr.
                 </p>
             </div>
         </footer>
