--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <form
                     action="https://gmail.us20.list-manage.com/subscribe/post?u=45bdf13b0a419b6308d844e64&amp;id=cd682406cc"
                     method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                    target="_blank" novalidate>
+                    target="_blank" validate>
                     <input type="text" name="FNAME" id="name" placeholder="Digite seu Nome">
-                    <input type="text" name="EMAIL" id="email" placeholder="Digite seu Email">
+                    <input type="email" name="EMAIL" id="email" placeholder="Digite seu Email">
                     <select name="PLACE">
                         <option value="pa">
                             Pará
