--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE
                 </h2>
                 <p class="margin_bottom">
-                    Neste evento, você vai aprender todos o segredos que vão te fazer ser um empreendedor de sucesso sem
+                    Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem
                     precisar contar com a sorte.
                 </p>
                 <form
